--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -47,6 +47,10 @@ body {
   gap: 10px;
 }
 
+.header .logo img {
+  height: 55px;
+}
+
 .header .logo h1 {
   color: var(--text-white);
   margin: 0;
