--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,8 +26,14 @@ nav a.active {
     text-decoration: underline;
 }
 
-.logo {
-    height: 50px;
+.header .logo {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.header .logo img {
+  height: 55px;
 }
 
 .hero {
