--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -84,9 +84,11 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
-  
 }
 
+.header .logo img {
+  height: 55px;
+}
 .header .logo h1 {
   color: var(--text-white);
   margin: 0;
