--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -139,15 +139,20 @@ body {
   object-fit: contain;
 }
 
+.teams {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 0;
+  background: linear-gradient(135deg, var(--primary-red), var(--primary-yellow));
+
+}
+
 .team {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex: 1;
-  background-color: rgba(0, 0, 0, 0.5); /* اللون الأسود مع الشفافية */
-  padding: 10px;
-  border-radius: 10px; /* اختياري لجعل الحواف مدورة */
-}
 
 .team img {
   width: 50px;
